--- a/app/src/main/res/layout/fragment_2.xml
+++ b/app/src/main/res/layout/fragment_2.xml
@@ -225,7 +225,7 @@
                     android:layout_weight="1"
                     android:fontFamily="sans-serif-condensed"
                     android:layout_marginTop="5dp"
-                    android:text="Blood Presure"
+                    android:text="Blood Pressure"
                     android:textSize="16sp"
                     android:textColor="@color/black"
                     android:textStyle="bold"
